--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -3,3 +3,25 @@
 @tailwind components;
 
 @tailwind utilities;
+
+.spinner {
+    position: absolute;
+}
+
+
+#search-results-list::-webkit-scrollbar {
+    width: 6px;
+}
+
+#search-results-list::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+#search-results-list::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 2px;
+}
+
+#search-results-list::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
